changed (idea of jp.martin" <jpmartin@iroise.com>)
=>thanks to jp.martin
-Now undoLayout works 
-Bug Fix

2000-05-03 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can give height and width of cells in kspread_dlg_layout
-Add new function INV => multiply by -1 each value
-bug fix

2000-05-04 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Change cursor when you want to resize column or row
I used now good cursor for each type (column or row)
Bug report by jp.martin <jpmartin@iroise.com> thanks
-bug fix

2000-05-05 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can select "Top" "Middle" "Bottom" position of text in menubar
(idea given by jp.martin <jpmartin@iroise.com> thanks )
-Bug fix in kspread_dlg_layout bug reported by jp.martin <jpmartin@iroise.com>
thanks

2000-05-06 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can show area selected example A1:B5
(idea given by jp.martin <jpmartin@iroise.com> thanks )
-Now there is LC mode => you can show area selected 
as 3Lx5C, L1C1 (A1)
-bug fix
-Now you can resize differents row or column
icon lo22-action-adjustrow.png lo22-action-adjustcol.png
lo22-action-middle.png,lo22-action-top.png,lo22-action-bottom.png
created by jp.martin <jpmartin@iroise.com> thanks
-Improved kspread_dlg_resize
-start to replace QMessageBox by KMessageBox

2000-05-07 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add two functions upper,lower and increase size font,decrease size font
but it's optional icon.
You can add them with kedittoolbar
lo22-action-upper.png lo22-action-fontsizedown.png lo22-action-fontsizeup.png
lo22-action-lower.png lo22-action-resizecol.png lo22-action-resizerow.png
icons created by jp.martin <jpmartin@iroise.com> thanks
bug fix